Cabal-Version:      >= 1.6
Name:               SDL2-image
Version:            0.1.0
Maintainer:         Joel Burget (joelburget@gmail.com)
Author:             Joel Burget, Lemmih (lemmih@gmail.com)
Copyright:          2004-2010 - Lemmih; 2013 - Joel Burget
License-File:       LICENSE
License:            BSD3
Build-Type:         Custom
Category:           Foreign binding
Synopsis:           Bindings to libSDL_image using SDL2
Description:
  SDL_image is an image file loading library.
  It loads images as SDL surfaces, and supports the
  following formats: BMP, GIF, JPEG, LBM, PCX, PNG,
                     PNM, TGA, TIFF, XCF, XPM, XV.
Extra-Source-Files: configure, includes/HsSDLConfig.h.in, SDL-image.buildinfo.in, config.mk.in
Data-Files:         MACOSX, README, TODO

Library
  Extensions:       ForeignFunctionInterface
  Build-Depends:    base >= 3 && <= 5, SDL2
  Exposed-Modules:
    Graphics.UI.SDL.Image,
    Graphics.UI.SDL.Image.Version
  Includes:         SDL.h SDL_image.h
  GHC-Options:      -Wall

source-repository head
    type:     git
    location: https://github.com/joelburget/sdl2-image.git
